# geometry

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  run_test.sh
.github/workflows/: cmake.yml
AOJ/: expander.py
AOJ/CGL_1/: A.cpp  B.cpp  C.cpp  CMakeLists.txt
AOJ/CGL_2/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp
AOJ/CGL_3/: A.cpp  B.cpp  C.cpp  CMakeLists.txt
AOJ/CGL_7/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp
src/: CMakeLists.txt  circle.hpp  config.hpp  cross_point.hpp  distance.hpp  intersection.hpp  line.hpp  point.hpp  polygon.hpp  ray.hpp  segment.hpp  tangent.hpp
test/: CMakeLists.txt  circle_test.cpp  config_test.cpp  cross_point_test.cpp  distance_test.cpp  intersection_test.cpp  line_test.cpp  point_test.cpp  polygon_test.cpp  ray_test.cpp  segment_test.cpp  tangent_test.cpp
